fix align scwitch

--- a/src/Pages/AppPage/BeNetworkPage/BeNetworkPage.module.scss
+++ b/src/Pages/AppPage/BeNetworkPage/BeNetworkPage.module.scss
@@ -2,6 +2,17 @@
   &__field {
     @apply grid grid-cols-5;
     gap: 25px;
+    &:not(:last-child) {
+      margin-bottom: 25px;
+    }
+    :global {
+      .ant-form-item {
+        margin-bottom: 0 !important;
+      }
+      .ant-input {
+        @apply mt-0;
+      }
+    }
   }
   &__toggle {
     @apply col-span-2;
